WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121759
Fix too-strict type error exceptions introduced in WebGL bindings
https://bugs.webkit.org/show_bug.cgi?id=121759
Summary
Fix too-strict type error exceptions introduced in WebGL bindings
Darin Adler
Reported
2013-09-21 23:26:30 PDT
Fix too-strict type error exceptions introduced in WebGL bindings
Attachments
Patch
(4.48 KB, patch)
2013-09-21 23:26 PDT
,
Darin Adler
ap
: review+
ap
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2013-09-21 23:26:59 PDT
Created
attachment 212294
[details]
Patch
Alexey Proskuryakov
Comment 2
2013-09-21 23:32:55 PDT
Comment on
attachment 212294
[details]
Patch r=me Please wait for EWS results - the patch is #1 in the queue now, so it should be fast.
Alexey Proskuryakov
Comment 3
2013-09-22 00:04:37 PDT
***
Bug 121758
has been marked as a duplicate of this bug. ***
Darin Adler
Comment 4
2013-09-22 00:09:58 PDT
Committed
r156243
: <
http://trac.webkit.org/changeset/156243
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug