Fix too-strict type error exceptions introduced in WebGL bindings https://bugs.webkit.org/show_bug.cgi?id=121759

Reviewed by Alexey Proskuryakov.

* bindings/js/JSWebGLRenderingContextCustom.cpp:
(WebCore::JSWebGLRenderingContext::getAttachedShaders): Allow undefined
or null without throwing type error.
(WebCore::JSWebGLRenderingContext::getProgramParameter): Ditto.
(WebCore::JSWebGLRenderingContext::getUniform): Ditto.
(WebCore::dataFunctionf): Ditto.
(WebCore::dataFunctioni): Ditto.
(WebCore::dataFunctionMatrix): Ditto.

Canonical link: https://commits.webkit.org/139754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156243 268f45cc-cd09-0410-ab3c-d52691b4dbfc